[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mr.roboto"
version = "2.0"
description = "Plone Jenkins Middleware"
readme = "README.rst"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [
  { name = "Plone Foundation", email = "plone-developers@lists.sourceforge.net" },
]
keywords = ["jenkins", "plone"]
classifiers = ["Programming Language :: Python"]
dependencies = [
  "cornice",
  "gitpython",
  "plone.releaser",
  "PyGithub",
  "pyramid_chameleon",
  "requests",
  "unidiff",
]

[project.urls]
Homepage = "https://github.com/plone/mr.roboto"
